; ModuleID = '/home/carl/AnghaBench/git/extr_http.c_finish_all_active_slots.c'
source_filename = "/home/carl/AnghaBench/git/extr_http.c_finish_all_active_slots.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.active_request_slot = type { %struct.active_request_slot*, i64 }

@active_queue_head = common dso_local global %struct.active_request_slot* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @finish_all_active_slots() #0 {
  %1 = alloca %struct.active_request_slot*, align 8
  %2 = load %struct.active_request_slot*, %struct.active_request_slot** @active_queue_head, align 8
  store %struct.active_request_slot* %2, %struct.active_request_slot** %1, align 8
  br label %3

3:                                                ; preds = %19, %0
  %4 = load %struct.active_request_slot*, %struct.active_request_slot** %1, align 8
  %5 = icmp ne %struct.active_request_slot* %4, null
  br i1 %5, label %6, label %20

6:                                                ; preds = %3
  %7 = load %struct.active_request_slot*, %struct.active_request_slot** %1, align 8
  %8 = getelementptr inbounds %struct.active_request_slot, %struct.active_request_slot* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %6
  %12 = load %struct.active_request_slot*, %struct.active_request_slot** %1, align 8
  %13 = call i32 @run_active_slot(%struct.active_request_slot* %12)
  %14 = load %struct.active_request_slot*, %struct.active_request_slot** @active_queue_head, align 8
  store %struct.active_request_slot* %14, %struct.active_request_slot** %1, align 8
  br label %19

15:                                               ; preds = %6
  %16 = load %struct.active_request_slot*, %struct.active_request_slot** %1, align 8
  %17 = getelementptr inbounds %struct.active_request_slot, %struct.active_request_slot* %16, i32 0, i32 0
  %18 = load %struct.active_request_slot*, %struct.active_request_slot** %17, align 8
  store %struct.active_request_slot* %18, %struct.active_request_slot** %1, align 8
  br label %19

19:                                               ; preds = %15, %11
  br label %3

20:                                               ; preds = %3
  ret void
}

declare dso_local i32 @run_active_slot(%struct.active_request_slot*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
